--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "framer-motion": "^8.1.9",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "styled-components": "^5.3.6",
+    "react-icons": "4.7.1",
+    "styled-components": "5.3.6",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "5.1.26"
   }
 }
